--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
 		
+			
 			<link rel="stylesheet" href="css/style.css" />
-		
+			
+			<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	</head>
 	<body class="landing">
 
 		<!-- Header -->
 			<header id="header" class="alt">
 				<h1 class="logo"><strong><a href="index.html">K </a></strong> T</h1>
+
+				 
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -32,8 +36,8 @@
 </div> -->
 
 <div class="fullscreen-bg">
-    <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
-        <source src="video/bgvideo.webm" type="video/webm">
+    <video loop muted autoplay poster="images/pic04.jpg" class="fullscreen-bg__video">
+        <!-- <source src="video/bgvideo.webm" type="video/webm"> -->
         <source src="video/bgvideo.mp4" type="video/mp4">
         <source src="video/bgvideo.ogv" type="video/ogg">
         <source src="video/bgvideo.mov" type="video/mov">
@@ -45,14 +49,33 @@
 				<h2>Khoi Tran</h2>
 				<hr>
 				<p>Web Designer || Front-End Developer</p>
+				
+				<div class="container">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/khoi-tran-35564991
+" class="icon fa-linkedin" target="0" rel="nofollow"></a></li>
+						<li><a href="https://www.facebook.com/friedricerus/" class="icon fa-facebook" target="0" rel="nofollow"></a></li>
+					</ul>
+				</div>
+				<hr>
 				<ul class="actions">
 					<li><a href="#" class="button special big">Work With Me</a></li>
 				</ul>
 			</section>
+
+			<!-- About Section -->
+
 <div class="about" id="about">
 	<h2>ABOUT</h2>
+<a class="about-logo" href="index.html">
+<img border="0" src="images/khoi.jpg" width="100" height="100">
+</a>
+	<hr>
+	<hr id="project-hr">
 		<p>Hello! My name is Khoi Tran and I'm a web designer/developer that is currently looking for new and challenging projects. A little bit about myself. I love to work out in the gym and I used to be in multiple dance teams. You can feel free and check out my resume <a href="resume/resume.pdf" target="0">here!</a></p>
 </div>
+
+			<!-- Projects Section -->
 
 <div class="projects" id="projects">
 	<h2>Projects</h2>
@@ -85,7 +108,7 @@
 	<div class="projectcontent">
 		<div class="projectbox">
 			<div class="imgdisplay">
-				<a href="http://www.marriagecounselingingainesvillega.com//" target="_blank">
+				<a href="http://www.marriagecounselingingainesvillega.com/" target="_blank">
             	<img src="images/portfolio03.png" class="overlayo">
             	</a>
 			</div>
@@ -103,7 +126,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/khoi-tran-35564991
 " class="icon fa-linkedin" target="0" rel="nofollow"></a></li>
-						<li><a href="https://www.instagram.com/friedricerus/" class="icon fa-instagram" target="0" rel="nofollow"></a></li>
+						<li><a href="https://www.facebook.com/friedricerus/" class="icon fa-facebook" target="0" rel="nofollow"></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Copyright 2016 Khoi Tran</li>
@@ -112,6 +135,9 @@
 					</ul>
 				</div>
 			</footer>
+
+			<script src="js/main.js"></script>
+
 
 	</body>
 </html>
