--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		
+			
+			<link rel="stylesheet" href="css/skel.css" />
+			<link rel="stylesheet" href="css/style-xlarge.css" />
 			<link rel="stylesheet" href="css/style.css" />
 		
 	</head>
@@ -15,7 +17,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<h1 class="logo"><strong><a href="index.html">K </a></strong> T</h1>
+				<h1 class="logo"><strong><a href="index.html">K </a></strong>| T</h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -49,9 +51,17 @@
 					<li><a href="#" class="button special big">Work With Me</a></li>
 				</ul>
 			</section>
+
+<!-- About Section -->
+
 <div class="about" id="about">
 	<h2>ABOUT</h2>
-		<p>Hello! My name is Khoi Tran and I'm a web designer/developer that is currently looking for new and challenging projects. A little bit about myself. I love to work out in the gym and I used to be in multiple dance teams. You can feel free and check out my resume <a href="resume/resume.pdf" target="0">here!</a></p>
+
+	<img src="images/khoi.jpg" height="150" width="150">
+
+	<hr>
+	<hr id="project-hr">
+		<p>Hello! My name is Khoi Tran and I'm a web designer/developer that is currently looking for new and challenging projects. I have worked with HTML, CSS, JavaScript, Photoshop, and Wordpress.A little bit about myself. I love to work out in the gym and I used to be in multiple dance teams. You can feel free and check out my resume <a href="resume/resume.pdf" target="0">here!</a></p>
 </div>
 
 <div class="projects" id="projects">
