--- a/index.html
+++ b/index.html
@@ -18,20 +18,36 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<h1 class="logo"><strong><a href="index.html">K </a></strong>| T</h1>
-				<nav id="nav">
+				<nav class="desktop-nav" id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#about">Resume</a></li>
+						<li><a href="resume/resume.pdf" rel="0" target="nofollow">Resume</a></li>
 						<li><a href="#projects">Projects</a></li>
 						<li><a href="#">Contact</a></li>
 					</ul>
 				</nav>
+
+<!-- Mobile nav button -->
+				<div class="mobile-nav-button">
+					<div class="line top"></div>
+					<div class="line middle"></div>
+					<div class="line bottom"></div>
+				</div>
+
+				<!-- Mobile nav container -->
+				<nav class="mobile-nav">
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Contact</a></li>
+						<li><a href="blog.html">Blog</a></li>
+					</ul>					
+				</nav>
+
 			</header>
-	<!-- <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
-  <iframe  frameborder="0" volume="0" height="100%" width="100%" 
-    src="https://youtube.com/embed/zaHoIm4n6zs?rel=0&autoplay=1">
-  </iframe>
-</div> -->
+	
+
+
 
 <div class="fullscreen-bg">
     <video loop muted autoplay poster="img/videoframe.jpg" class="fullscreen-bg__video">
@@ -61,7 +77,7 @@
 
 	<hr>
 	<hr id="project-hr">
-		<p>Hello! My name is Khoi Tran and I'm a web designer/developer that is currently looking for new and challenging projects. I have worked with HTML, CSS, JavaScript, Photoshop, and Wordpress.A little bit about myself. I love to work out in the gym and I used to be in multiple dance teams. You can feel free and check out my resume <a href="resume/resume.pdf" target="0">here!</a></p>
+		<p>Hello! My name is Khoi Tran and I'm a web designer/developer that is currently looking for new and challenging projects. I have worked with HTML, CSS, JavaScript, Photoshop, and Wordpress.A little bit about myself. I love to work out in the gym and while I Was in college, I used to be in multiple dance teams.</p>
 </div>
 
 <div class="projects" id="projects">
@@ -80,7 +96,7 @@
 		</div>
 	</div>
 
- 	<h3><a href="http://www.localartinstaugustinefl.com/" target="_blank">Kansas City Ultimate Security Incorporation</a></h3>
+ 	<h3><a href="http://www.privatesecurityinkansascitymo.com/" target="_blank">Kansas City Ultimate Security Incorporation</a></h3>
 	<div class="projectcontent">
 		<div class="projectbox">
 			<div class="imgdisplay">
@@ -91,11 +107,11 @@
 		</div>
 	</div>
 
-	<h3><a href="http://www.localartinstaugustinefl.com/" target="_blank">Avenues of Life Counseling and Coaching</a></h3>
+	<h3><a href="http://www.marriagecounselingingainesvillega.com//" target="_blank">Avenues of Life Counseling and Coaching</a></h3>
 	<div class="projectcontent">
 		<div class="projectbox">
 			<div class="imgdisplay">
-				<a href="http://www.marriagecounselingingainesvillega.com//" target="_blank">
+				<a href="http://www.marriagecounselingingainesvillega.com/" target="_blank">
             	<img src="images/portfolio03.png" class="overlayo">
             	</a>
 			</div>
